--- a/package.json
+++ b/package.json
@@ -5,7 +5,19 @@
   "main": "index.js",
   "author": "Santiago Bandiera",
   "license": "MIT",
+  "engines": {
+    "node": ">=8.9.0"
+  },
+  "engineStrict": false,
+  "scripts": {
+    "test": "mocha --recursive --full-trace --require babel-polyfill --require babel-register"
+  },
   "dependencies": {
+  },
+  "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
   }
