--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "babel-root-slash-import": "^1.1.0",
     "chai": "^4.1.2",
     "eslint": "^4.13.1",
     "eslint-config-google": "^0.9.1",
