--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,31 +5,23 @@
   "version": "0.1.0",
   "configurations": [
     {
-      "name": "Run Mocha Tests",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/node_modules/mocha/bin/mocha",
-      "stopOnEntry": false,
+      "name": "Mocha Tests",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
       "args": [
-        "test/**/*-test.js",
-        "--no-timeouts",
+        "-u",
+        "tdd",
+        "--timeout",
+        "999999",
+        "--colors",
+        "${workspaceFolder}/test/**/*-test.js",
         "--require",
         "babel-polyfill",
         "--require",
-        "babel-register",
-        
+        "babel-register"
       ],
-      "cwd": "${workspaceRoot}",
-      "preLaunchTask": null,
-      "runtimeExecutable": null,
-      "runtimeArgs": [
-        "--nolazy"
-      ],
-      "env": {
-        "NODE_ENV": "development"
-      },
-      "console": "internalConsole",
-      "sourceMaps": true
+      "internalConsoleOptions": "openOnSessionStart"
     }
   ]
 }
