--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "ArrowFunctionExpression": false,
         "FunctionExpression": false
       }
-    }]
+    }],
+    "object-curly-spacing": ["error", "always"] ,
+    "array-bracket-spacing": ["error", "always"]
   }
 }
