--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,12 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      },
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "dedicated"
       }
     }
   ]
