Add BinarySearchTree insert method and test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "bandiera"
   ],
   "editor.tabSize": 2,
+  "prettier.printWidth": 80,
   "prettier.tabWidth": 2,
   "prettier.useTabs": false,
   "prettier.trailingComma": "es5"
