Add remove method to BST (doc, code and tests). Add babel plugins

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,8 @@
   "sourceMaps": "both",
   "retainLines": true,
   "plugins": [
-    "babel-root-slash-import"
+    "babel-root-slash-import",
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
