--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^8.0.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
