Add some String and Array exercises

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   "cSpell.words": [
-    "bandiera"
+    "anticonstitucionalmente",
+    "bandiera",
+    "centrifugadlos",
+    "constantinopla",
+    "cuatro",
+    "esternocleidomastoideo",
+    "peperinopomoro"
   ],
   "editor.tabSize": 2,
   "prettier.printWidth": 80,
