--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.1.0",
   "configurations": [
+    
     {
       "type": "node",
       "request": "launch",
@@ -16,6 +17,25 @@
         "999999",
         "--colors",
         "${workspaceFolder}/test/**/*-test.js",
+        "--require",
+        "babel-polyfill",
+        "--require",
+        "babel-register"
+      ],
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha Tests Current file",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "-u",
+        "tdd",
+        "--timeout",
+        "999999",
+        "--colors",
+        "${file}",
         "--require",
         "babel-polyfill",
         "--require",
