--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,6 @@
     }],
     "object-curly-spacing": ["error", "always"] ,
     "array-bracket-spacing": ["error", "always"]
+    // "arrow-parens": [1, "as-needed"]
   }
 }
